# BudgetWise

./: .dockerignore  .env.example  .gitignore  BUDGET_ENGINE_SUMMARY.md  DOCKER_README.md  DOCKER_SETUP.md  Dockerfile  RANKING_SYSTEM_FIX.md  RANKING_SYSTEM_SUMMARY.md  README.md  SQLALCHEMY_SETUP_COMPLETE.md  SUPABASE_SETUP.md  UPDATE_ENV_WITH_PASSWORD.md  budget_service_running.txt  budgetwise-architecture.md  create_test_user.py  disable_rls_for_testing.sql  docker-compose.yml  fix_db.py  fix_users_table.sql  init_database.py  init_database_supabase.py  pyproject.toml  requirements.txt  seed_categories.py  seed_category_rules.py  setup_database.py  test_budget_api.sh  test_output.txt  test_services.sh
.claude/: settings.local.json
frontend/: . env.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: BudgetSummary.tsx  ChatInput.tsx  ChatMessage.tsx
src/backend/: budget_test_output.txt
src/backend/components/auth-service/: Dockerfile  app.py  main.py  routes.py
src/backend/database/: schema.sql  seed_data.sql
src/backend/shared/: database.py  db_models.py  db_session.py  models.py  utils.py
src/frontend/: package-lock.json  package.json
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/components/: protected-route.tsx
src/frontend/context/: AuthContext.tsx
src/frontend/lib/: providers.tsx
supabase/migrations/: add_conversation_id_to_chat_messages.sql
(+45 files in other folders)
