[tool.poetry]
name = "budgetwise"
version = "0.1.0"
description = "hackathon project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.118.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
pydantic = ">=2.0.0"
supabase = ">=2.0.0"
python-dotenv = ">=1.0.0"
httpx = ">=0.27.0"
openai = ">=1.12.0"
elevenlabs = ">=0.2.24"
tenacity = ">=8.2.0"
sqlalchemy = "^2.0.43"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
